--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
   },
   "dependencies": {
     "@ant-design/icons": "^5.0.1",
+    "ahooks": "^3.7.6",
     "antd": "^5.4.2",
+    "axios": "^1.3.5",
     "umi": "^4.0.65"
   },
   "devDependencies": {
