--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "ahooks": "^3.7.6",
     "antd": "^5.4.2",
     "axios": "^1.3.5",
+    "nanoid": "^4.0.2",
     "umi": "^4.0.65"
   },
   "devDependencies": {
