--- a/package.json
+++ b/package.json
@@ -13,7 +13,9 @@
     "ahooks": "^3.7.6",
     "antd": "^5.4.2",
     "axios": "^1.3.5",
+    "md-editor-rt": "^2.11.2",
     "nanoid": "^4.0.2",
+    "store": "^2.0.12",
     "umi": "^4.0.65"
   },
   "devDependencies": {
